welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:23: error: type mismatch;
 found   : Unit
 required: Boolean
					avance()
                                              ^SlugTracking:20: error: type mismatch;
 found   : Unit
 required: Boolean
				if (getCouleurSol() != Color.green){
                                ^SlugTracking:16: error: type mismatch;
 found   : Unit
 required: Boolean
			if (getCouleurSol() != Color.green){
                        ^