welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
       

 

	
def isFacingTrail():Boolean = {
	avance()
	if (estFaceMur()){
		return false
	}else{
		if (getCouleurSol() != Color.green){
			recule()
			gauche()
			avance()
			if (getCouleurSol() != Color.green){
				recule()
				gauche()
				avance()
				if (getCouleurSol() != Color.green){
					retourne()
					avance()
					avance()
				}
			}
		} else{
			recule()
			return true
		}
   
	}
} 


	

